--- a/styles/Styles.css
+++ b/styles/Styles.css
@@ -20,63 +20,60 @@ main ul li:nth-child(1){
 	width:100%;
 	height:100%;
 	background-color:none;
-	
 	background-image:
 		conic-gradient(
 			at 40% top,
-			transparent 124deg,
-			green 124deg 225deg,
-			transparent 225deg
-		),
-		conic-gradient(
-			at 40% top,
-			transparent 124deg,
-			green 124deg 225deg,
+			transparent 130deg,
+			White 124deg 225deg,
 			transparent 225deg
 		);
-	
 	background-size:
-		30em 12em, 
-		40em 16em;
-	
+		65em 25em;
 	background-repeat:no-repeat;
-	
 	animation:achtergrond 20s linear infinite;
 }
 
 main ul li:nth-child(2){
-    position: absolute;
-    height: 0;
-    width: 0;
-    border-left: 20em solid transparent;
-    border-right: 13em solid transparent;
-    border-bottom: 12em solid #bbb;
-    bottom: 0;
-    left: 25em;
-    z-index: 1;
+    position:fixed;
+	width:100%;
+	height:100%;
+	background-color:none;
+	background-image:
+		conic-gradient(
+			at 40% top,
+			transparent 124deg,
+			#bbb 124deg 225deg,
+			transparent 225deg
+		);
+	background-size:
+		50em 17em;
+	background-repeat:no-repeat;
+	animation:achtergrond2 20s linear infinite;
+    animation-fill-mode: forwards;
 }
 
 main ul li:nth-child(3){
-    position: absolute;
-    height: 0;
-    width: 0;
-    border-left: 20em solid transparent;
-    border-right: 13em solid transparent;
-    border-bottom: 12em solid white;
-    bottom: 0;
-    left: 45em;
+    position:fixed;
+	width:100%;
+	height:100%;
+	background-color:none;
+	background-image:
+		conic-gradient(
+			at 45% top,
+			transparent 135deg,
+			rgb(172, 161, 161) 124deg 225deg,
+			transparent 225deg
+		);
+	background-size:
+		30em 10em;
+	background-repeat:no-repeat;
+	animation:achtergrond3 20s linear infinite;
+    animation-fill-mode: forwards;
 }
 
-main ul li:nth-child(4){
-    position: absolute;
-    height: 0;
-    width: 0;
-    border-left: 22em solid transparent;
-    border-right: 10em solid transparent;
-    border-bottom: 16em solid #bbb;
-    bottom: 0;
-    right: 0;
-}
+/* main ul li:nth-child(4){
+
+} */
 
 main section:nth-of-type(1){
     height: 5em;
@@ -107,24 +104,35 @@ main section:nth-of-type(1){
     }
 }
 
-@keyframes firework2 {
-    0% {
-        transform: scale(1);
-   }
-    100% {
-        transform: scale(2);
-    }
-}
-
 @keyframes achtergrond {
-	0%{
+    0%{
 		background-position: 
-			100vh bottom,
 			120vh bottom;
 	}
 	100%{
 		background-position: 
-			calc(0vh - 30em) bottom,
-			calc(-20vh - 40em) bottom;
+		calc(-10vh - 40em) bottom;
+	}
+}
+
+@keyframes achtergrond2 {
+    0%{
+		background-position: 
+			100vh bottom;
+	}
+	100%{
+		background-position: 
+			calc(0vh - 30em) bottom;
+	}
+}
+
+@keyframes achtergrond3 {
+    0%{
+		background-position: 
+			90vh bottom;
+	}
+	100%{
+		background-position: 
+			calc(30vh - 30em) bottom;
 	}
 }
