--- a/styles/Styles.css
+++ b/styles/Styles.css
@@ -30,7 +30,7 @@ main ul li:nth-child(1){
 	background-size:
 		65em 25em;
 	background-repeat:no-repeat;
-	animation:achtergrond 20s linear infinite;
+	animation:achtergrond 20s linear infinite alternate;
 }
 
 main ul li:nth-child(2){
@@ -48,8 +48,7 @@ main ul li:nth-child(2){
 	background-size:
 		50em 17em;
 	background-repeat:no-repeat;
-	animation:achtergrond2 20s linear infinite;
-    animation-fill-mode: forwards;
+	animation:achtergrond2 20s linear infinite alternate;
 }
 
 main ul li:nth-child(3){
@@ -67,13 +66,8 @@ main ul li:nth-child(3){
 	background-size:
 		30em 10em;
 	background-repeat:no-repeat;
-	animation:achtergrond3 20s linear infinite;
-    animation-fill-mode: forwards;
+	animation:achtergrond3 20s linear infinite alternate;
 }
-
-/* main ul li:nth-child(4){
-
-} */
 
 main section:nth-of-type(1){
     height: 5em;
@@ -83,6 +77,7 @@ main section:nth-of-type(1){
     position: absolute;
     right: 5em;
     top: 5em;
+	animation:achtergrond3 20s linear infinite alternate;
 }
 
 @keyframes firework {
@@ -111,7 +106,7 @@ main section:nth-of-type(1){
 	}
 	100%{
 		background-position: 
-		calc(-10vh - 40em) bottom;
+		calc(10vh - 40em) bottom;
 	}
 }
 
@@ -122,7 +117,7 @@ main section:nth-of-type(1){
 	}
 	100%{
 		background-position: 
-			calc(0vh - 30em) bottom;
+			calc(20vh - 30em) bottom;
 	}
 }
 
@@ -133,6 +128,6 @@ main section:nth-of-type(1){
 	}
 	100%{
 		background-position: 
-			calc(30vh - 30em) bottom;
+			calc(40vh - 30em) bottom;
 	}
 }
