--- a/styles/Styles.css
+++ b/styles/Styles.css
@@ -30,7 +30,7 @@ main ul li:nth-child(1){
 	background-size:
 		65em 25em;
 	background-repeat:no-repeat;
-	animation:achtergrond 25s linear infinite reverse;
+	animation:achtergrond 20s linear infinite;
 }
 
 main ul li:nth-child(2){
@@ -48,7 +48,7 @@ main ul li:nth-child(2){
 	background-size:
 		50em 17em;
 	background-repeat:no-repeat;
-	animation:achtergrond2 25s linear infinite reverse;
+	animation:achtergrond2 20s linear infinite;
 }
 
 main ul li:nth-child(3){
@@ -66,7 +66,7 @@ main ul li:nth-child(3){
 	background-size:
 		30em 10em;
 	background-repeat:no-repeat;
-	animation:achtergrond3 25s linear infinite reverse;
+	animation:achtergrond3 20s linear infinite;
 }
 
 main section:nth-of-type(1){
@@ -77,7 +77,7 @@ main section:nth-of-type(1){
 	top: 25vh;
 	left: calc(50% - 9em);
 	border-radius: 70% 70% 60% 60% / 70% 70%;
-	animation: firework 1.5s ease-in-out infinite alternate;
+	animation: firework 1s ease-in-out infinite alternate;
 }
 
 main section:nth-of-type(1)::before { 
