--- a/styles/Styles.css
+++ b/styles/Styles.css
@@ -1,130 +1,194 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
-
 main {
-    position: relative;
-    height: 100vh;
-    overflow: hidden;
-    background: #282A35;
+	position: relative;
+	height: 100vh;
+	overflow: hidden;
+	background: #002642;
 }
-
-main ul li{
-    list-style-type: none;
+main ul li {
+	list-style-type: none;
 }
-
-main ul li:nth-child(1){
-    position:fixed;
-	width:100%;
-	height:100%;
-	background-color:none;
-	background-image:
-		conic-gradient(
-			at 40% top,
-			transparent 130deg,
-			White 124deg 225deg,
-			transparent 225deg
-		);
-	background-size:
-		65em 25em;
-	background-repeat:no-repeat;
-	animation: achtergrond 10s linear infinite;
-}
-
-main ul li:nth-child(2){
-    position: fixed;
+main ul:first-of-type li:nth-of-type(1) {
+	position: fixed;
 	width: 100%;
 	height: 100%;
 	background-color: none;
-	background-image:
-		conic-gradient(
-			at 40% top,
-			transparent 124deg,
-			#bbb 124deg 225deg,
-			transparent 225deg
-		);
-	background-size:
-		50em 17em;
+	background-image: conic-gradient( at 40% top, transparent 130deg, White 124deg 225deg, transparent 225deg);
+	background-size: 65em 25em;
 	background-repeat: no-repeat;
-	animation: achtergrond2 10s linear infinite;
+	animation: achtergrond 10s linear 1;
+	visibility: hidden;
 }
-
-main ul li:nth-child(3){
-    position:fixed;
-	width:100%;
-	height:100%;
-	background-color:none;
-	background-image:
-		conic-gradient(
-			at 45% top,
-			transparent 135deg,
-			rgb(172, 161, 161) 124deg 225deg,
-			transparent 225deg
-		);
-	background-size:
-		30em 10em;
-	background-repeat:no-repeat;
-	animation: achtergrond3 10s linear infinite;
+main ul:first-of-type li:nth-of-type(2) {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background-color: none;
+	background-image: conic-gradient( at 40% top, transparent 124deg, #bbb 124deg 225deg, transparent 225deg);
+	background-size: 50em 17em;
+	background-repeat: no-repeat;
+	animation: achtergrond2 10s linear 1;
+	visibility: hidden;
 }
-
-main section:nth-of-type(1){
-    position: absolute;
+main ul:first-of-type li:nth-of-type(3) {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background-color: none;
+	background-image: conic-gradient( at 45% top, transparent 135deg, rgb(172, 161, 161) 124deg 225deg, transparent 225deg);
+	background-size: 30em 10em;
+	background-repeat: no-repeat;
+	animation: achtergrond3 10s linear 1;
+	visibility: hidden;
+}
+main section:nth-of-type(1) {
+	position: absolute;
 	width: 18em;
 	height: 7em;
-	background-color:yellow;
+	background-color: yellow;
 	top: 25vh;
 	left: calc(50% - 9em);
 	border-radius: 70% 70% 60% 60% / 70% 70%;
-	animation: firework 1s ease-in-out infinite alternate;
+	animation: firework 10s 1 ease-in-out;
+	visibility: hidden;
 }
-
-main section:nth-of-type(1)::before { 
+main section:nth-of-type(1)::before {
 	position: absolute;
-	content: ""; 
+	content: "";
 	background-color: red;
 	height: 7em;
 	width: 2em;
 	left: 0;
 	border-radius: 70% 70% 60% 60% / 70% 70%;
 }
-
+main ul:nth-of-type(2) li:nth-of-type(1) {
+	width: 5em;
+	height: 5em;
+	background-color: rgba(255, 78, 157, 0.5);
+	border-radius: 50%;
+	position: absolute;
+	left: calc(50% - 2.5em);
+	bottom: 0;
+}
+main ul:nth-of-type(2) li:nth-of-type(2) {
+	width: 5em;
+	height: 5em;
+	background-color: rgba(195, 222, 66, 0.5);
+	border-radius: 50%;
+	position: absolute;
+	left: calc(45% - 2.5em);
+	bottom: 3em;
+}
+main ul:nth-of-type(2) li:nth-of-type(3) {
+	width: 5em;
+	height: 5em;
+	background-color: rgba(255, 160, 55, 0.5);
+	border-radius: 50%;
+	position: absolute;
+	left: calc(55% - 2.5em);
+	bottom: 3em;
+}
+main ul:nth-of-type(2) li:nth-of-type(4) {
+	width: 5em;
+	height: 5em;
+	background-color: red;
+	border-radius: 50%;
+	position: absolute;
+	left: calc(50% - 2.5em);
+	bottom: 6em;
+}
+main ul:nth-of-type(2) li:nth-of-type(5) {
+	width: 5em;
+	height: 5em;
+	background-color: red;
+	border-radius: 50%;
+	position: absolute;
+	left: calc(40% - 2.5em);
+	bottom: 6em;
+}
+main ul:nth-of-type(2) li:nth-of-type(6) {
+	width: 5em;
+	height: 5em;
+	background-color: red;
+	border-radius: 50%;
+	position: absolute;
+	left: calc(60% - 2.5em);
+	bottom: 6em;
+}
+main ul:nth-of-type(2) li:nth-of-type(7) {
+	width: 5em;
+	height: 5em;
+	background-color: red;
+	border-radius: 50%;
+	position: absolute;
+	left: calc(50% - 2.5em);
+	bottom: 11.5em;
+}
 @keyframes firework {
-    0%{
-		transform: rotate(10deg);
+	0% {
+		visibility: visible;
+		transform: translatey(0em);
+	}
+	10% {
+		transform: translatey(6em);
+	}
+	20% {
+		transform: translatey(0);
+	}
+	30% {
+		transform: translatey(6em);
+	}
+	40% {
+		transform: translatey(0);
 	}
 	50% {
-		transform: rotate(-10deg) translatey(10em);
+		transform: translatey(6em);
 	}
-	100%{
-		transform: rotate(10deg);
+	60% {
+		transform: translatey(0);
+	}
+	70% {
+		transform: translatey(6em);
+	}
+	80% {
+		transform: translatey(0);
+	}
+	93% {
+		transform: rotate(180deg) translatey(-100vh);
+	}
+	100% {
+		transform: rotate(180deg) translatey(-100vh);
+		visibility: hidden;
 	}
 }
-
 @keyframes achtergrond {
-    0%{
-		background-position: 120vh bottom;
+	0% {
+		visibility: visible;
+		background-position: 90vh bottom;
 	}
-	100%{
-		background-position: calc(90vh - 40em) bottom;
+	100% {
+		background-position: calc(120vh - 30em) bottom;
 	}
 }
-
 @keyframes achtergrond2 {
-    0%{
+	0% {
+		visibility: visible;
 		background-position: 100vh bottom;
 	}
-	100%{
+	100% {
 		background-position: calc(100vh - 30em) bottom;
 	}
 }
-
 @keyframes achtergrond3 {
-    0%{
-		background-position: 90vh bottom;
+	0% {
+		visibility: visible;
+		background-position: 120vh bottom;
 	}
-	100%{
-		background-position: calc(120vh - 30em) bottom;
+	100% {
+		background-position: calc(90vh - 40em) bottom;
 	}
 }
