--- a/styles/Styles.css
+++ b/styles/Styles.css
@@ -7,7 +7,7 @@ main {
 	position: relative;
 	height: 100vh;
 	overflow: hidden;
-	background: #002642;
+	background: #282A35;;
 }
 main ul li {
 	list-style-type: none;
@@ -20,8 +20,8 @@ main ul:first-of-type li:nth-of-type(1) {
 	background-image: conic-gradient( at 40% top, transparent 130deg, White 124deg 225deg, transparent 225deg);
 	background-size: 65em 25em;
 	background-repeat: no-repeat;
-	animation: achtergrond 10s linear 1;
-	visibility: hidden;
+	animation: achtergrond 8s linear 1;
+	background-position: calc(120vh - 30em) bottom;
 }
 main ul:first-of-type li:nth-of-type(2) {
 	position: fixed;
@@ -31,8 +31,8 @@ main ul:first-of-type li:nth-of-type(2) {
 	background-image: conic-gradient( at 40% top, transparent 124deg, #bbb 124deg 225deg, transparent 225deg);
 	background-size: 50em 17em;
 	background-repeat: no-repeat;
-	animation: achtergrond2 10s linear 1;
-	visibility: hidden;
+	animation: achtergrond2 8s linear 1;
+	background-position: calc(100vh - 30em) bottom;
 }
 main ul:first-of-type li:nth-of-type(3) {
 	position: fixed;
@@ -42,8 +42,8 @@ main ul:first-of-type li:nth-of-type(3) {
 	background-image: conic-gradient( at 45% top, transparent 135deg, rgb(172, 161, 161) 124deg 225deg, transparent 225deg);
 	background-size: 30em 10em;
 	background-repeat: no-repeat;
-	animation: achtergrond3 10s linear 1;
-	visibility: hidden;
+	animation: achtergrond3 8s linear 1;
+	background-position: calc(90vh - 40em) bottom;
 }
 main section:nth-of-type(1) {
 	position: absolute;
@@ -65,6 +65,10 @@ main section:nth-of-type(1)::before {
 	left: 0;
 	border-radius: 70% 70% 60% 60% / 70% 70%;
 }
+main ul:nth-of-type(2) li {
+	visibility: hidden;
+	animation: explosion 10s 1 9s ease-in-out;
+}
 main ul:nth-of-type(2) li:nth-of-type(1) {
 	width: 5em;
 	height: 5em;
@@ -72,7 +76,7 @@ main ul:nth-of-type(2) li:nth-of-type(1) {
 	border-radius: 50%;
 	position: absolute;
 	left: calc(50% - 2.5em);
-	bottom: 0;
+	bottom: -5em;
 }
 main ul:nth-of-type(2) li:nth-of-type(2) {
 	width: 5em;
@@ -81,7 +85,7 @@ main ul:nth-of-type(2) li:nth-of-type(2) {
 	border-radius: 50%;
 	position: absolute;
 	left: calc(45% - 2.5em);
-	bottom: 3em;
+	bottom: -8em;
 }
 main ul:nth-of-type(2) li:nth-of-type(3) {
 	width: 5em;
@@ -90,43 +94,43 @@ main ul:nth-of-type(2) li:nth-of-type(3) {
 	border-radius: 50%;
 	position: absolute;
 	left: calc(55% - 2.5em);
-	bottom: 3em;
+	bottom: -8em;
 }
 main ul:nth-of-type(2) li:nth-of-type(4) {
 	width: 5em;
 	height: 5em;
-	background-color: red;
+	background-color: rgba(0, 152, 163, 0.79);
 	border-radius: 50%;
 	position: absolute;
 	left: calc(50% - 2.5em);
-	bottom: 6em;
+	bottom: -11em;
 }
 main ul:nth-of-type(2) li:nth-of-type(5) {
 	width: 5em;
 	height: 5em;
-	background-color: red;
+	background-color: rgba(255, 255, 163, 0.79);
 	border-radius: 50%;
 	position: absolute;
 	left: calc(40% - 2.5em);
-	bottom: 6em;
+	bottom: -11em;
 }
 main ul:nth-of-type(2) li:nth-of-type(6) {
 	width: 5em;
 	height: 5em;
-	background-color: red;
+	background-color: rgba(255, 0, 163, 0.79);
 	border-radius: 50%;
 	position: absolute;
 	left: calc(60% - 2.5em);
-	bottom: 6em;
+	bottom: -11em;
 }
 main ul:nth-of-type(2) li:nth-of-type(7) {
 	width: 5em;
 	height: 5em;
-	background-color: red;
+	background-color: rgba(255, 135, 0, 0.5);
 	border-radius: 50%;
 	position: absolute;
 	left: calc(50% - 2.5em);
-	bottom: 11.5em;
+	bottom: -16.5em;
 }
 @keyframes firework {
 	0% {
@@ -167,7 +171,6 @@ main ul:nth-of-type(2) li:nth-of-type(7) {
 }
 @keyframes achtergrond {
 	0% {
-		visibility: visible;
 		background-position: 90vh bottom;
 	}
 	100% {
@@ -176,7 +179,6 @@ main ul:nth-of-type(2) li:nth-of-type(7) {
 }
 @keyframes achtergrond2 {
 	0% {
-		visibility: visible;
 		background-position: 100vh bottom;
 	}
 	100% {
@@ -185,10 +187,18 @@ main ul:nth-of-type(2) li:nth-of-type(7) {
 }
 @keyframes achtergrond3 {
 	0% {
-		visibility: visible;
 		background-position: 120vh bottom;
 	}
 	100% {
 		background-position: calc(90vh - 40em) bottom;
 	}
 }
+@keyframes explosion {
+	0% {
+		transform: 0;
+		visibility: visible;
+	}
+	100% {
+		transform:scale(100);
+	}
+}	
