--- a/styles/Styles.css
+++ b/styles/Styles.css
@@ -7,7 +7,8 @@ main {
 	position: relative;
 	height: 100vh;
 	overflow: hidden;
-	background: #282A35;;
+	background: #282A35;
+	animation: backBlur 2s 1 9s ease-in-out;
 }
 main ul li {
 	list-style-type: none;
@@ -98,66 +99,71 @@ main > section:nth-of-type(1) ul li:nth-of-type(4){
 }
 main > ul:nth-of-type(2) li {
 	visibility: hidden;
-	animation: explosion 4s 1 8.75s ease-in-out;
 }
 main > ul:nth-of-type(2) li:nth-of-type(1) {
 	width: 5em;
 	height: 5em;
-	background-color: rgba(255, 78, 157, 0.5);
+	background-color: rgba(255, 78, 157, 0.4);
 	border-radius: 50%;
 	position: absolute;
 	left: calc(50% - 2.5em);
 	bottom: -5em;
+	animation: explosion 6s 1 8.75s ease-in-out;
 }
 main > ul:nth-of-type(2) li:nth-of-type(2) {
 	width: 5em;
 	height: 5em;
-	background-color: rgba(195, 222, 66, 0.5);
+	background-color: rgba(195, 222, 66, 0.4);
 	border-radius: 50%;
 	position: absolute;
 	left: calc(45% - 2.5em);
 	bottom: -8em;
+	animation: explosion 4s 1 9s ease-in-out;
 }
 main > ul:nth-of-type(2) li:nth-of-type(3) {
 	width: 5em;
 	height: 5em;
-	background-color: rgba(255, 160, 55, 0.5);
+	background-color: rgba(255, 160, 55, 0.4);
 	border-radius: 50%;
 	position: absolute;
 	left: calc(55% - 2.5em);
 	bottom: -8em;
+	animation: explosion 6s 1 9.25s ease-in-out;
 }
 main > ul:nth-of-type(2) li:nth-of-type(4) {
 	width: 5em;
 	height: 5em;
-	background-color: rgba(0, 152, 163, 0.79);
+	background-color: rgba(0, 152, 163, 0.4);
 	border-radius: 50%;
 	position: absolute;
 	left: calc(50% - 2.5em);
 	bottom: -11em;
+	animation: explosion 4s 1 9.5s ease-in-out;
 }
 main > ul:nth-of-type(2) li:nth-of-type(5) {
 	width: 5em;
 	height: 5em;
-	background-color: rgba(255, 255, 163, 0.79);
+	background-color: rgba(255, 255, 163, 0.4);
 	border-radius: 50%;
 	position: absolute;
 	left: calc(40% - 2.5em);
 	bottom: -11em;
+	animation: explosion 6s 1 9.75s ease-in-out;
 }
 main > ul:nth-of-type(2) li:nth-of-type(6) {
 	width: 5em;
 	height: 5em;
-	background-color: rgba(255, 0, 163, 0.79);
+	background-color: rgba(255, 0, 163, 0.4);
 	border-radius: 50%;
 	position: absolute;
 	left: calc(60% - 2.5em);
 	bottom: -11em;
+	animation: explosion 4s 1 10s ease-in-out;
 }
 main > ul:nth-of-type(2) li:nth-of-type(7) {
 	width: 5em;
 	height: 5em;
-	background-color: rgba(255, 135, 0, 0.5);
+	background-color: rgba(255, 135, 0, 0.4);
 	border-radius: 50%;
 	position: absolute;
 	left: calc(50% - 2.5em);
@@ -229,11 +235,12 @@ main > ul:nth-of-type(2) li:nth-of-type(7) {
 		transform: 0;
 		visibility: visible;
 	}
-	85% {
+	10% {
 		transform:scale(20);
 	}
 	100% {
 		transform:scale(0);
+		filter: blur(1em);
 	}
 }
 @keyframes fireEngine {
