--- a/styles/Styles.css
+++ b/styles/Styles.css
@@ -8,7 +8,6 @@ main {
 	height: 100vh;
 	overflow: hidden;
 	background: #282A35;
-	animation: backBlur 2s 1 9s ease-in-out;
 }
 main ul li {
 	list-style-type: none;
@@ -50,7 +49,7 @@ main > section:nth-of-type(1) {
 	position: absolute;
 	width: 18em;
 	height: 7em;
-	background-color: grey;
+	background: #FF007F;
 	top: 25vh;
 	left: calc(50% - 9em);
 	border-radius: 0% 70% 60% 0% / 70% 70%;
@@ -64,12 +63,12 @@ main > section:nth-of-type(1)::before {
 	height: 7em;
 	width: 2em;
 	left: 0;
+	z-index: 20;
 }
 main > section:nth-of-type(1) ul{
 	position: relative;
 	transform: rotate(220deg);
 	transform-origin: 4em;
-	animation: fireEngine .15s ease-in infinite;
 }
 main > section:nth-of-type(1) ul li{
 	position: absolute;
@@ -81,21 +80,25 @@ main > section:nth-of-type(1) ul li:nth-of-type(1){
 	height: 7em;
 	width: 7em;
 	background-color: orangered;
+	animation: fireEngine .15s ease-in infinite;
 }
 main > section:nth-of-type(1) ul li:nth-of-type(2){
 	height: 6em;
 	width: 6em;
 	background-color: orange;
+	animation: fireEngine .20s ease-in infinite;
 }
 main > section:nth-of-type(1) ul li:nth-of-type(3){
 	height: 5em;
 	width: 5em;
 	background-color: gold;
+	animation: fireEngine .10s ease-in infinite;
 }
 main > section:nth-of-type(1) ul li:nth-of-type(4){
 	height: 4em;
 	width: 4em;
 	background-color: lightyellow;
+	animation: fireEngine .15s ease-in infinite;
 }
 main > ul:nth-of-type(2) li {
 	visibility: hidden;
@@ -118,7 +121,7 @@ main > ul:nth-of-type(2) li:nth-of-type(2) {
 	position: absolute;
 	left: calc(45% - 2.5em);
 	bottom: -8em;
-	animation: explosion 4s 1 9s ease-in-out;
+	animation: explosion 7s 1 8.80s ease-in-out;
 }
 main > ul:nth-of-type(2) li:nth-of-type(3) {
 	width: 5em;
@@ -128,7 +131,7 @@ main > ul:nth-of-type(2) li:nth-of-type(3) {
 	position: absolute;
 	left: calc(55% - 2.5em);
 	bottom: -8em;
-	animation: explosion 6s 1 9.25s ease-in-out;
+	animation: explosion 6s 1 8.85s ease-in-out;
 }
 main > ul:nth-of-type(2) li:nth-of-type(4) {
 	width: 5em;
@@ -138,7 +141,7 @@ main > ul:nth-of-type(2) li:nth-of-type(4) {
 	position: absolute;
 	left: calc(50% - 2.5em);
 	bottom: -11em;
-	animation: explosion 4s 1 9.5s ease-in-out;
+	animation: explosion 7s 1 8.9s ease-in-out;
 }
 main > ul:nth-of-type(2) li:nth-of-type(5) {
 	width: 5em;
@@ -148,7 +151,7 @@ main > ul:nth-of-type(2) li:nth-of-type(5) {
 	position: absolute;
 	left: calc(40% - 2.5em);
 	bottom: -11em;
-	animation: explosion 6s 1 9.75s ease-in-out;
+	animation: explosion 6s 1 8.95s ease-in-out;
 }
 main > ul:nth-of-type(2) li:nth-of-type(6) {
 	width: 5em;
@@ -158,7 +161,7 @@ main > ul:nth-of-type(2) li:nth-of-type(6) {
 	position: absolute;
 	left: calc(60% - 2.5em);
 	bottom: -11em;
-	animation: explosion 4s 1 10s ease-in-out;
+	animation: explosion 7s 1 9s ease-in-out;
 }
 main > ul:nth-of-type(2) li:nth-of-type(7) {
 	width: 5em;
@@ -234,32 +237,41 @@ main > ul:nth-of-type(2) li:nth-of-type(7) {
 	0% {
 		transform: 0;
 		visibility: visible;
+		filter: hue-rotate(10000deg) blur(.5em);
 	}
-	10% {
-		transform:scale(20);
+	5% {
+		transform:scale(22);
+		filter: hue-rotate(0) blur(.5em);		
 	}
 	100% {
-		transform:scale(0);
-		filter: blur(1em);
+		transform:scale(0);	
 	}
 }
 @keyframes fireEngine {
 	0% {
-		transform: rotate(219deg);
+		transform: rotate(1deg);
 	}
 	20% {
-		transform: rotate(222deg) scaleY(1.05);
+		transform: rotate(0deg) scaleY(1.05);
 	}
 	40% {
-		transform: rotate(219deg);
+		transform: rotate(1deg);
 	}
 	40% {
-		transform: rotate(221deg);
+		transform: rotate(0deg);
 	}
 	80% {
-		transform: rotate(218deg) scaleY(0.90);
+		transform: rotate(1deg) scalex(0.90);
 	}
 	100% {
-		transform: rotate(221deg);
+		transform: rotate(0deg);
 	}
 }
+/* @keyframes babyFirework {
+	0% {
+		transform: scalex(5);
+	}
+	0% {
+		transform: rotate(1deg);
+	}
+} */
