--- a/styles/Styles.css
+++ b/styles/Styles.css
@@ -9,6 +9,9 @@ main {
 	overflow: hidden;
 	background: #282A35;
 }
+main input:checked ~ section, main input:checked ~ ul:first-of-type li, main input:checked ~ section:nth-of-type(1) ul li, main input:checked ~ ul:nth-of-type(2) li {
+    animation-play-state: running;
+}
 main ul li {
 	list-style-type: none;
 }
@@ -20,7 +23,8 @@ main > ul:first-of-type li:nth-of-type(1) {
 	background-image: conic-gradient( at 40% top, transparent 130deg, White 124deg 225deg, transparent 225deg);
 	background-size: 65em 25em;
 	background-repeat: no-repeat;
-	animation: achtergrond 8s linear 1;
+	animation: achtergrond 10.6s linear 1;
+	animation-play-state: paused;
 	background-position: calc(120vh - 30em) bottom;
 }
 main > ul:first-of-type li:nth-of-type(2) {
@@ -31,7 +35,8 @@ main > ul:first-of-type li:nth-of-type(2) {
 	background-image: conic-gradient( at 40% top, transparent 124deg, #bbb 124deg 225deg, transparent 225deg);
 	background-size: 50em 17em;
 	background-repeat: no-repeat;
-	animation: achtergrond2 8s linear 1;
+	animation: achtergrond2 10.6s linear 1;
+	animation-play-state: paused;
 	background-position: calc(100vh - 30em) bottom;
 }
 main > ul:first-of-type li:nth-of-type(3) {
@@ -42,7 +47,8 @@ main > ul:first-of-type li:nth-of-type(3) {
 	background-image: conic-gradient( at 45% top, transparent 135deg, rgb(172, 161, 161) 124deg 225deg, transparent 225deg);
 	background-size: 30em 10em;
 	background-repeat: no-repeat;
-	animation: achtergrond3 8s linear 1;
+	animation: achtergrond3 10.6s linear 1;
+	animation-play-state: paused;
 	background-position: calc(90vh - 40em) bottom;
 }
 main > section:nth-of-type(1) {
@@ -54,6 +60,7 @@ main > section:nth-of-type(1) {
 	left: calc(50% - 9em);
 	border-radius: 0% 70% 60% 0% / 70% 70%;
 	animation: firework 10s 1 ease-in-out;
+	animation-play-state: paused;
 	visibility: hidden;
 }
 main > section:nth-of-type(1)::before {
@@ -81,24 +88,28 @@ main > section:nth-of-type(1) ul li:nth-of-type(1){
 	width: 7em;
 	background-color: orangered;
 	animation: fireEngine .15s ease-in infinite;
+	animation-play-state: paused;
 }
 main > section:nth-of-type(1) ul li:nth-of-type(2){
 	height: 6em;
 	width: 6em;
 	background-color: orange;
 	animation: fireEngine .20s ease-in infinite;
+	animation-play-state: paused;
 }
 main > section:nth-of-type(1) ul li:nth-of-type(3){
 	height: 5em;
 	width: 5em;
 	background-color: gold;
 	animation: fireEngine .10s ease-in infinite;
+	animation-play-state: paused;
 }
 main > section:nth-of-type(1) ul li:nth-of-type(4){
 	height: 4em;
 	width: 4em;
 	background-color: lightyellow;
 	animation: fireEngine .15s ease-in infinite;
+	animation-play-state: paused;
 }
 main > ul:nth-of-type(2) li {
 	visibility: hidden;
@@ -109,9 +120,10 @@ main > ul:nth-of-type(2) li:nth-of-type(1) {
 	background-color: rgba(255, 78, 157, 0.4);
 	border-radius: 50%;
 	position: absolute;
-	left: calc(35% - 2.5em);
+	left: calc(45% - 2.5em);
 	bottom: -5em;
-	animation: babyFirework 1.75s 5 ease-in-out;
+	animation: explosion 2s 1 9s ease-in-out;
+	animation-play-state: paused;
 }
 main > ul:nth-of-type(2) li:nth-of-type(2) {
 	width: 5em;
@@ -119,9 +131,10 @@ main > ul:nth-of-type(2) li:nth-of-type(2) {
 	background-color: rgba(195, 222, 66, 0.4);
 	border-radius: 50%;
 	position: absolute;
-	left: calc(65% - 2.5em);
+	left: calc(55% - 2.5em);
 	bottom: -8em;
-	animation: babyFirework 1.375s 6 .5s ease-in-out;
+	animation: explosion 2s 1 9s ease-in-out;
+	animation-play-state: paused;
 }
 main > ul:nth-of-type(2) li:nth-of-type(3) {
 	width: 5em;
@@ -132,6 +145,7 @@ main > ul:nth-of-type(2) li:nth-of-type(3) {
 	left: calc(55% - 2.5em);
 	bottom: -8em;
 	animation: explosion 2s 1 8.85s ease-in-out;
+	animation-play-state: paused;
 }
 main > ul:nth-of-type(2) li:nth-of-type(4) {
 	width: 5em;
@@ -142,6 +156,7 @@ main > ul:nth-of-type(2) li:nth-of-type(4) {
 	left: calc(50% - 2.5em);
 	bottom: -11em;
 	animation: explosion 2s 1 8.9s ease-in-out;
+	animation-play-state: paused;
 }
 main > ul:nth-of-type(2) li:nth-of-type(5) {
 	width: 5em;
@@ -152,6 +167,7 @@ main > ul:nth-of-type(2) li:nth-of-type(5) {
 	left: calc(40% - 2.5em);
 	bottom: -11em;
 	animation: explosion 2s 1 8.95s ease-in-out;
+	animation-play-state: paused;
 }
 main > ul:nth-of-type(2) li:nth-of-type(6) {
 	width: 5em;
@@ -159,9 +175,10 @@ main > ul:nth-of-type(2) li:nth-of-type(6) {
 	background-color: rgba(255, 0, 163, 0.4);
 	border-radius: 50%;
 	position: absolute;
-	left: calc(60% - 2.5em);
+	left: calc(35% - 2.5em);
 	bottom: -11em;
-	animation: explosion 2s 1 9s ease-in-out;
+	animation: babyFirework 1.75s 5 ease-in-out;
+	animation-play-state: paused;
 }
 main > ul:nth-of-type(2) li:nth-of-type(7) {
 	width: 5em;
@@ -169,8 +186,10 @@ main > ul:nth-of-type(2) li:nth-of-type(7) {
 	background-color: rgba(255, 135, 0, 0.4);
 	border-radius: 50%;
 	position: absolute;
-	left: calc(50% - 2.5em);
+	left: calc(65% - 2.5em);
 	bottom: -16.5em;
+	animation: babyFirework 1.375s 6 .5s ease-in;
+	animation-play-state: paused;
 }
 @keyframes firework {
 	0% {
@@ -213,24 +232,87 @@ main > ul:nth-of-type(2) li:nth-of-type(7) {
 	0% {
 		background-position: 90vh bottom;
 	}
-	100% {
+	77% {
 		background-position: calc(120vh - 30em) bottom;
+	}
+	84% {
+		opacity: 1;
+	}
+	86.6% {
+		opacity: 0;
+	}
+	89.2% {
+		opacity: 1;
+	}
+	91.8% {
+		opacity: 0;
+	}
+	94.4% {
+		opacity: 1;
+	}
+	97% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
 	}
 }
 @keyframes achtergrond2 {
 	0% {
 		background-position: 100vh bottom;
 	}
-	100% {
+	77% {
 		background-position: calc(100vh - 30em) bottom;
+	}
+	84% {
+		opacity: 1;
+	}
+	86.6% {
+		opacity: 0;
+	}
+	89.2% {
+		opacity: 1;
+	}
+	91.8% {
+		opacity: 0;
+	}
+	94.4% {
+		opacity: 1;
+	}
+	97% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
 	}
 }
 @keyframes achtergrond3 {
 	0% {
 		background-position: 120vh bottom;
 	}
-	100% {
+	77% {
 		background-position: calc(90vh - 40em) bottom;
+	}
+	84% {
+		opacity: 1;
+	}
+	86.6% {
+		opacity: 0;
+	}
+	89.2% {
+		opacity: 1;
+	}
+	91.8% {
+		opacity: 0;
+	}
+	94.4% {
+		opacity: 1;
+	}
+	97% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
 	}
 }
 @keyframes explosion {
@@ -277,10 +359,10 @@ main > ul:nth-of-type(2) li:nth-of-type(7) {
 		filter: hue-rotate(10000000000000000000000000000000000deg);	
 	}
 	100% {
-		transform: scale(5);
+		transform: scale(8);
 		visibility: hidden;
 		bottom: 25em;
 		transform: scale(1) rotate3d(1, 1, 0, -360deg);
-		filter: hue-rotate(10000000000000000000000000000000000deg) blur(1.5em);	
+		filter: blur(1.5em);	
 	}
 }
