--- a/styles/Styles.css
+++ b/styles/Styles.css
@@ -3,11 +3,18 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+:root {
+	--lucht-achtergrond: #282A35;
+	--berg-achtergrond1: #ffffff;
+	--berg-achtergrond2: #bbb;
+	--berg-achtergrond3: rgb(172, 161, 161);
+	--raket-kleur: #FF007F;
+}
 main {
 	position: relative;
 	height: 100vh;
 	overflow: hidden;
-	background: #282A35;
+	background: var(--lucht-achtergrond);
 }
 main input:checked ~ section, main input:checked ~ ul:first-of-type li, main input:checked ~ section:nth-of-type(1) ul li, main input:checked ~ ul:nth-of-type(2) li {
     animation-play-state: running;
@@ -20,7 +27,7 @@ main > ul:first-of-type li:nth-of-type(1) {
 	width: 100%;
 	height: 100%;
 	background-color: none;
-	background-image: conic-gradient( at 40% top, transparent 130deg, White 124deg 225deg, transparent 225deg);
+	background-image: conic-gradient( at 40% top, transparent 130deg, var(--berg-achtergrond1) 124deg 225deg, transparent 225deg);
 	background-size: 65em 25em;
 	background-repeat: no-repeat;
 	animation: achtergrond 10.6s linear 1;
@@ -32,7 +39,7 @@ main > ul:first-of-type li:nth-of-type(2) {
 	width: 100%;
 	height: 100%;
 	background-color: none;
-	background-image: conic-gradient( at 40% top, transparent 124deg, #bbb 124deg 225deg, transparent 225deg);
+	background-image: conic-gradient( at 40% top, transparent 124deg, var(--berg-achtergrond2) 124deg 225deg, transparent 225deg);
 	background-size: 50em 17em;
 	background-repeat: no-repeat;
 	animation: achtergrond2 10.6s linear 1;
@@ -44,7 +51,7 @@ main > ul:first-of-type li:nth-of-type(3) {
 	width: 100%;
 	height: 100%;
 	background-color: none;
-	background-image: conic-gradient( at 45% top, transparent 135deg, rgb(172, 161, 161) 124deg 225deg, transparent 225deg);
+	background-image: conic-gradient( at 45% top, transparent 135deg, var(--berg-achtergrond3) 124deg 225deg, transparent 225deg);
 	background-size: 30em 10em;
 	background-repeat: no-repeat;
 	animation: achtergrond3 10.6s linear 1;
@@ -55,7 +62,7 @@ main > section:nth-of-type(1) {
 	position: absolute;
 	width: 18em;
 	height: 7em;
-	background: #FF007F;
+	background: var(--raket-kleur);
 	top: 25vh;
 	left: calc(50% - 9em);
 	border-radius: 0% 70% 60% 0% / 70% 70%;
