--- a/styles/bergen.css
+++ b/styles/bergen.css
@@ -1,4 +1,5 @@
 /* Geinspireerd door; https://codepen.io/shooft/pen/QWOaMjJ met dan aan Sanne */
+/* code voor grootste berg */
 main > ul:first-of-type li:nth-of-type(1) {
 	position: fixed;
 	width: 100%;
@@ -11,6 +12,7 @@ main > ul:first-of-type li:nth-of-type(1) {
 	animation-play-state: paused;
 	background-position: -20vw bottom;
 }
+/* code voor middelgrote berg */
 main > ul:first-of-type li:nth-of-type(2) {
 	position: fixed;
 	width: 100%;
@@ -23,6 +25,7 @@ main > ul:first-of-type li:nth-of-type(2) {
 	animation-play-state: paused;
 	background-position: -40vw bottom;
 }
+/* code voor kleinste berg */
 main > ul:first-of-type li:nth-of-type(3) {
 	position: fixed;
 	width: 100%;
