--- a/styles/explosie.css
+++ b/styles/explosie.css
@@ -1,3 +1,4 @@
+/* code voor verschillende cirkels die geanimeerd worden als explosie */
 main > ul:nth-of-type(2) li:nth-of-type(1) {
 	width: 5em;
 	height: 5em;
